fix standard filter

--- a/notebooks/data_sampling.ipynb
+++ b/notebooks/data_sampling.ipynb
@@ -45,223 +45,18 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0        True\n",
-       " 1        True\n",
-       " 2        True\n",
-       " 3        True\n",
-       " 4        True\n",
-       " 5        True\n",
-       " 6        True\n",
-       " 7        True\n",
-       " 8        True\n",
-       " 9       False\n",
-       " 10       True\n",
-       " 11       True\n",
-       " 12       True\n",
-       " 13       True\n",
-       " 14       True\n",
-       " 15       True\n",
-       " 16       True\n",
-       " 17       True\n",
-       " 18       True\n",
-       " 19       True\n",
-       " 20       True\n",
-       " 21       True\n",
-       " 22       True\n",
-       " 23       True\n",
-       " 24       True\n",
-       " 25       True\n",
-       " 26       True\n",
-       " 27       True\n",
-       " 28       True\n",
-       " 29       True\n",
-       "         ...  \n",
-       " 1913    False\n",
-       " 1914    False\n",
-       " 1915    False\n",
-       " 1916    False\n",
-       " 1917    False\n",
-       " 1918    False\n",
-       " 1919    False\n",
-       " 1920     True\n",
-       " 1921    False\n",
-       " 1922    False\n",
-       " 1923     True\n",
-       " 1924    False\n",
-       " 1925    False\n",
-       " 1926     True\n",
-       " 1927     True\n",
-       " 1928     True\n",
-       " 1929     True\n",
-       " 1930     True\n",
-       " 1931     True\n",
-       " 1932     True\n",
-       " 1933     True\n",
-       " 1934     True\n",
-       " 1935     True\n",
-       " 1936     True\n",
-       " 1937     True\n",
-       " 1938     True\n",
-       " 1939     True\n",
-       " 1940     True\n",
-       " 1941     True\n",
-       " 1942     True\n",
-       " Name: overall_sparsity, Length: 1943, dtype: bool]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y.add_site_filter(y.summary_df['overall_sparsity'] < sparsity_th)"
+    "y.construct_standard_site_filters()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0        True\n",
-       " 1        True\n",
-       " 2        True\n",
-       " 3        True\n",
-       " 4        True\n",
-       " 5        True\n",
-       " 6        True\n",
-       " 7        True\n",
-       " 8        True\n",
-       " 9       False\n",
-       " 10       True\n",
-       " 11       True\n",
-       " 12       True\n",
-       " 13       True\n",
-       " 14       True\n",
-       " 15       True\n",
-       " 16       True\n",
-       " 17       True\n",
-       " 18       True\n",
-       " 19       True\n",
-       " 20       True\n",
-       " 21       True\n",
-       " 22       True\n",
-       " 23       True\n",
-       " 24       True\n",
-       " 25       True\n",
-       " 26       True\n",
-       " 27       True\n",
-       " 28       True\n",
-       " 29       True\n",
-       "         ...  \n",
-       " 1913    False\n",
-       " 1914    False\n",
-       " 1915    False\n",
-       " 1916    False\n",
-       " 1917    False\n",
-       " 1918    False\n",
-       " 1919    False\n",
-       " 1920     True\n",
-       " 1921    False\n",
-       " 1922    False\n",
-       " 1923     True\n",
-       " 1924    False\n",
-       " 1925    False\n",
-       " 1926     True\n",
-       " 1927     True\n",
-       " 1928     True\n",
-       " 1929     True\n",
-       " 1930     True\n",
-       " 1931     True\n",
-       " 1932     True\n",
-       " 1933     True\n",
-       " 1934     True\n",
-       " 1935     True\n",
-       " 1936     True\n",
-       " 1937     True\n",
-       " 1938     True\n",
-       " 1939     True\n",
-       " 1940     True\n",
-       " 1941     True\n",
-       " 1942     True\n",
-       " Name: overall_sparsity, Length: 1943, dtype: bool, 0        True\n",
-       " 1        True\n",
-       " 2        True\n",
-       " 3        True\n",
-       " 4        True\n",
-       " 5        True\n",
-       " 6        True\n",
-       " 7        True\n",
-       " 8        True\n",
-       " 9       False\n",
-       " 10       True\n",
-       " 11       True\n",
-       " 12       True\n",
-       " 13       True\n",
-       " 14       True\n",
-       " 15       True\n",
-       " 16       True\n",
-       " 17       True\n",
-       " 18       True\n",
-       " 19       True\n",
-       " 20       True\n",
-       " 21       True\n",
-       " 22       True\n",
-       " 23       True\n",
-       " 24       True\n",
-       " 25       True\n",
-       " 26       True\n",
-       " 27       True\n",
-       " 28       True\n",
-       " 29       True\n",
-       "         ...  \n",
-       " 1913    False\n",
-       " 1914    False\n",
-       " 1915    False\n",
-       " 1916    False\n",
-       " 1917    False\n",
-       " 1918    False\n",
-       " 1919    False\n",
-       " 1920     True\n",
-       " 1921    False\n",
-       " 1922    False\n",
-       " 1923     True\n",
-       " 1924    False\n",
-       " 1925    False\n",
-       " 1926     True\n",
-       " 1927     True\n",
-       " 1928     True\n",
-       " 1929     True\n",
-       " 1930     True\n",
-       " 1931     True\n",
-       " 1932     True\n",
-       " 1933     True\n",
-       " 1934     True\n",
-       " 1935     True\n",
-       " 1936     True\n",
-       " 1937     True\n",
-       " 1938     True\n",
-       " 1939     True\n",
-       " 1940     True\n",
-       " 1941     True\n",
-       " 1942     True\n",
-       " Name: overall_quality, Length: 1943, dtype: bool]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y.add_site_filter(y.summary_df['overall_quality'] > quality_th)"
+    "#y.add_site_filter(y.summary_df['overall_quality'] > quality_th)"
    ]
   },
   {
@@ -273,6 +68,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "      overall_sparsity\n",
+      "0                 True\n",
+      "1                 True\n",
+      "2                 True\n",
+      "3                 True\n",
+      "4                 True\n",
+      "5                 True\n",
+      "6                 True\n",
+      "7                 True\n",
+      "8                 True\n",
+      "9                False\n",
+      "10                True\n",
+      "11                True\n",
+      "12                True\n",
+      "13                True\n",
+      "14                True\n",
+      "15                True\n",
+      "16                True\n",
+      "17                True\n",
+      "18                True\n",
+      "19                True\n",
+      "20                True\n",
+      "21                True\n",
+      "22                True\n",
+      "23                True\n",
+      "24                True\n",
+      "25                True\n",
+      "26                True\n",
+      "27                True\n",
+      "28                True\n",
+      "29                True\n",
+      "...                ...\n",
+      "1913             False\n",
+      "1914             False\n",
+      "1915             False\n",
+      "1916             False\n",
+      "1917             False\n",
+      "1918             False\n",
+      "1919             False\n",
+      "1920              True\n",
+      "1921             False\n",
+      "1922             False\n",
+      "1923              True\n",
+      "1924             False\n",
+      "1925             False\n",
+      "1926              True\n",
+      "1927              True\n",
+      "1928              True\n",
+      "1929              True\n",
+      "1930              True\n",
+      "1931              True\n",
+      "1932              True\n",
+      "1933              True\n",
+      "1934              True\n",
+      "1935              True\n",
+      "1936              True\n",
+      "1937              True\n",
+      "1938              True\n",
+      "1939              True\n",
+      "1940              True\n",
+      "1941              True\n",
+      "1942              True\n",
+      "\n",
+      "[1943 rows x 1 columns]\n",
       "[============================================================] 100.0% ...\r"
      ]
     },
@@ -343,90 +202,90 @@
        " 287  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
        " \n",
        " [288 rows x 10 columns],\n",
-       "                   site_ID                         sensor_ID start_timestamp  \\\n",
-       " 206   ZT161685000441C0141  414051616004231_AC_Module_Type_C          8/8/16   \n",
-       " 1596         TABB01125140            2002041544_SPR-3000m-U        12/31/13   \n",
-       " 311          TABF01017766            2002098497_SPR-7000m-U        12/31/13   \n",
-       " 1124         TADKC1018154    1913039440_SMA-SB-3800TL-US-22          6/2/15   \n",
-       " 960   ZT163485000441C0937  414051644007646_AC_Module_Type_C         5/11/17   \n",
+       "                   site_ID                        sensor_ID start_timestamp  \\\n",
+       " 901   ZT170385000441C0905  715533-3G96-2314_SPR-3000p-TL-1         5/22/17   \n",
+       " 217          TADBC1077995        839201911_FRONIUS IG XXXX         3/18/15   \n",
+       " 1660         TAEHC1001825   1913132466_SMA-SB-5000TL-US-22        10/30/15   \n",
+       " 1291         TAAL01116059           2002125208_SPR-4000m-U        12/31/13   \n",
+       " 1557         TAEAC1064469   1913096904_SMA-SB-6000TL-US-22         7/29/15   \n",
        " \n",
        "      end_timestamp duration_days time_sample  quantile_95  overall_sparsity  \\\n",
-       " 206        6/20/19          1044         288     0.213500          0.178161   \n",
-       " 1596       4/10/15           463         288     2.178300          0.000000   \n",
-       " 311        5/21/19          1965         288     4.919500          0.003562   \n",
-       " 1124       5/21/19          1447         288     2.633925          0.008293   \n",
-       " 960        6/20/19           768         288     0.217000          0.167969   \n",
+       " 901        6/20/19           757         288     1.199500          0.007926   \n",
+       " 217        6/20/19          1553         288     7.711200          0.100451   \n",
+       " 1660       8/20/18          1023         288     3.525700          0.098729   \n",
+       " 1291       12/7/15           704         288     3.364445          0.007102   \n",
+       " 1557       6/20/19          1420         288     5.126410          0.020423   \n",
        " \n",
        "       overall_quality days_selected  \n",
-       " 206          0.799808     [421 695]  \n",
-       " 1596         0.997840     [443  23]  \n",
-       " 311          0.981679     [634 917]  \n",
-       " 1124         0.973048     [388 126]  \n",
-       " 960          0.791667     [498 284]  ,\n",
-       "       overall_sparsity  overall_quality\n",
-       " 0                 True             True\n",
-       " 1                 True             True\n",
-       " 2                 True             True\n",
-       " 3                 True             True\n",
-       " 4                 True             True\n",
-       " 5                 True             True\n",
-       " 6                 True             True\n",
-       " 7                 True             True\n",
-       " 8                 True             True\n",
-       " 9                False            False\n",
-       " 10                True             True\n",
-       " 11                True             True\n",
-       " 12                True             True\n",
-       " 13                True             True\n",
-       " 14                True             True\n",
-       " 15                True             True\n",
-       " 16                True             True\n",
-       " 17                True             True\n",
-       " 18                True             True\n",
-       " 19                True             True\n",
-       " 20                True             True\n",
-       " 21                True             True\n",
-       " 22                True             True\n",
-       " 23                True             True\n",
-       " 24                True             True\n",
-       " 25                True             True\n",
-       " 26                True             True\n",
-       " 27                True             True\n",
-       " 28                True             True\n",
-       " 29                True             True\n",
-       " ...                ...              ...\n",
-       " 1913             False            False\n",
-       " 1914             False            False\n",
-       " 1915             False            False\n",
-       " 1916             False            False\n",
-       " 1917             False            False\n",
-       " 1918             False            False\n",
-       " 1919             False            False\n",
-       " 1920              True             True\n",
-       " 1921             False            False\n",
-       " 1922             False            False\n",
-       " 1923              True             True\n",
-       " 1924             False            False\n",
-       " 1925             False            False\n",
-       " 1926              True             True\n",
-       " 1927              True             True\n",
-       " 1928              True             True\n",
-       " 1929              True             True\n",
-       " 1930              True             True\n",
-       " 1931              True             True\n",
-       " 1932              True             True\n",
-       " 1933              True             True\n",
-       " 1934              True             True\n",
-       " 1935              True             True\n",
-       " 1936              True             True\n",
-       " 1937              True             True\n",
-       " 1938              True             True\n",
-       " 1939              True             True\n",
-       " 1940              True             True\n",
-       " 1941              True             True\n",
-       " 1942              True             True\n",
+       " 901          0.968296     [286 204]  \n",
+       " 217          0.886027     [569 897]  \n",
+       " 1660         0.887586     [ 82 345]  \n",
+       " 1291         0.991477     [157 247]  \n",
+       " 1557         0.961972   [  42 1266]  ,\n",
+       "       overall_sparsity\n",
+       " 0                 True\n",
+       " 1                 True\n",
+       " 2                 True\n",
+       " 3                 True\n",
+       " 4                 True\n",
+       " 5                 True\n",
+       " 6                 True\n",
+       " 7                 True\n",
+       " 8                 True\n",
+       " 9                False\n",
+       " 10                True\n",
+       " 11                True\n",
+       " 12                True\n",
+       " 13                True\n",
+       " 14                True\n",
+       " 15                True\n",
+       " 16                True\n",
+       " 17                True\n",
+       " 18                True\n",
+       " 19                True\n",
+       " 20                True\n",
+       " 21                True\n",
+       " 22                True\n",
+       " 23                True\n",
+       " 24                True\n",
+       " 25                True\n",
+       " 26                True\n",
+       " 27                True\n",
+       " 28                True\n",
+       " 29                True\n",
+       " ...                ...\n",
+       " 1913             False\n",
+       " 1914             False\n",
+       " 1915             False\n",
+       " 1916             False\n",
+       " 1917             False\n",
+       " 1918             False\n",
+       " 1919             False\n",
+       " 1920              True\n",
+       " 1921             False\n",
+       " 1922             False\n",
+       " 1923              True\n",
+       " 1924             False\n",
+       " 1925             False\n",
+       " 1926              True\n",
+       " 1927              True\n",
+       " 1928              True\n",
+       " 1929              True\n",
+       " 1930              True\n",
+       " 1931              True\n",
+       " 1932              True\n",
+       " 1933              True\n",
+       " 1934              True\n",
+       " 1935              True\n",
+       " 1936              True\n",
+       " 1937              True\n",
+       " 1938              True\n",
+       " 1939              True\n",
+       " 1940              True\n",
+       " 1941              True\n",
+       " 1942              True\n",
        " \n",
-       " [1943 rows x 2 columns])"
+       " [1943 rows x 1 columns])"
       ]
      },
      "execution_count": 6,
