--- a/notebooks/data_sampling.ipynb
+++ b/notebooks/data_sampling.ipynb
@@ -68,70 +68,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      overall_sparsity\n",
-      "0                 True\n",
-      "1                 True\n",
-      "2                 True\n",
-      "3                 True\n",
-      "4                 True\n",
-      "5                 True\n",
-      "6                 True\n",
-      "7                 True\n",
-      "8                 True\n",
-      "9                False\n",
-      "10                True\n",
-      "11                True\n",
-      "12                True\n",
-      "13                True\n",
-      "14                True\n",
-      "15                True\n",
-      "16                True\n",
-      "17                True\n",
-      "18                True\n",
-      "19                True\n",
-      "20                True\n",
-      "21                True\n",
-      "22                True\n",
-      "23                True\n",
-      "24                True\n",
-      "25                True\n",
-      "26                True\n",
-      "27                True\n",
-      "28                True\n",
-      "29                True\n",
-      "...                ...\n",
-      "1913             False\n",
-      "1914             False\n",
-      "1915             False\n",
-      "1916             False\n",
-      "1917             False\n",
-      "1918             False\n",
-      "1919             False\n",
-      "1920              True\n",
-      "1921             False\n",
-      "1922             False\n",
-      "1923              True\n",
-      "1924             False\n",
-      "1925             False\n",
-      "1926              True\n",
-      "1927              True\n",
-      "1928              True\n",
-      "1929              True\n",
-      "1930              True\n",
-      "1931              True\n",
-      "1932              True\n",
-      "1933              True\n",
-      "1934              True\n",
-      "1935              True\n",
-      "1936              True\n",
-      "1937              True\n",
-      "1938              True\n",
-      "1939              True\n",
-      "1940              True\n",
-      "1941              True\n",
-      "1942              True\n",
+      "      overall_sparsity  overall_quality  time_sample\n",
+      "0                 True             True         True\n",
+      "1                 True             True         True\n",
+      "2                 True             True         True\n",
+      "3                 True             True        False\n",
+      "4                 True             True         True\n",
+      "5                 True             True         True\n",
+      "6                 True             True         True\n",
+      "7                 True             True         True\n",
+      "8                 True             True        False\n",
+      "9                False            False        False\n",
+      "10                True             True         True\n",
+      "11                True             True         True\n",
+      "12                True             True         True\n",
+      "13                True             True         True\n",
+      "14                True             True         True\n",
+      "15                True             True         True\n",
+      "16                True             True         True\n",
+      "17                True             True         True\n",
+      "18                True             True         True\n",
+      "19                True             True         True\n",
+      "20                True             True         True\n",
+      "21                True             True         True\n",
+      "22                True             True         True\n",
+      "23                True             True         True\n",
+      "24                True             True         True\n",
+      "25                True             True         True\n",
+      "26                True             True         True\n",
+      "27                True             True         True\n",
+      "28                True             True         True\n",
+      "29                True             True         True\n",
+      "...                ...              ...          ...\n",
+      "1913             False            False         True\n",
+      "1914             False            False         True\n",
+      "1915             False            False         True\n",
+      "1916             False            False         True\n",
+      "1917             False            False         True\n",
+      "1918             False            False         True\n",
+      "1919             False            False         True\n",
+      "1920              True             True         True\n",
+      "1921             False            False        False\n",
+      "1922             False            False        False\n",
+      "1923              True             True         True\n",
+      "1924             False            False         True\n",
+      "1925             False            False         True\n",
+      "1926              True             True         True\n",
+      "1927              True             True         True\n",
+      "1928              True             True         True\n",
+      "1929              True             True         True\n",
+      "1930              True             True         True\n",
+      "1931              True             True         True\n",
+      "1932              True             True         True\n",
+      "1933              True             True         True\n",
+      "1934              True             True         True\n",
+      "1935              True             True         True\n",
+      "1936              True             True         True\n",
+      "1937              True             True         True\n",
+      "1938              True             True         True\n",
+      "1939              True             True         True\n",
+      "1940              True             True         True\n",
+      "1941              True             True         True\n",
+      "1942              True             True         True\n",
       "\n",
-      "[1943 rows x 1 columns]\n",
+      "[1943 rows x 3 columns]\n",
       "[============================================================] 100.0% ...\r"
      ]
     },
@@ -203,89 +203,89 @@
        " \n",
        " [288 rows x 10 columns],\n",
        "                   site_ID                        sensor_ID start_timestamp  \\\n",
-       " 901   ZT170385000441C0905  715533-3G96-2314_SPR-3000p-TL-1         5/22/17   \n",
-       " 217          TADBC1077995        839201911_FRONIUS IG XXXX         3/18/15   \n",
-       " 1660         TAEHC1001825   1913132466_SMA-SB-5000TL-US-22        10/30/15   \n",
-       " 1291         TAAL01116059           2002125208_SPR-4000m-U        12/31/13   \n",
-       " 1557         TAEAC1064469   1913096904_SMA-SB-6000TL-US-22         7/29/15   \n",
+       " 1112         TAEJC1014576  259447-3G04-3715_SPR-5000p-TL-1         2/11/16   \n",
+       " 310   ZT161585000441C0490   1913184523_SMA-SB-7700TL-US-22         7/15/16   \n",
+       " 1514         TAEIC1067083   1913174954_SMA-SB-7700TL-US-22         4/25/16   \n",
+       " 1844         TADBC1078163  635548-3N25-4913_SPR-3800p-TL-1         3/12/15   \n",
+       " 1228         TAEHC1041811   1913109156_SMA-SB-6000TL-US-22         9/27/16   \n",
        " \n",
        "      end_timestamp duration_days time_sample  quantile_95  overall_sparsity  \\\n",
-       " 901        6/20/19           757         288     1.199500          0.007926   \n",
-       " 217        6/20/19          1553         288     7.711200          0.100451   \n",
-       " 1660       8/20/18          1023         288     3.525700          0.098729   \n",
-       " 1291       12/7/15           704         288     3.364445          0.007102   \n",
-       " 1557       6/20/19          1420         288     5.126410          0.020423   \n",
+       " 1112       3/28/18           774         288     1.655845          0.082687   \n",
+       " 310        1/22/17           189         288     5.650335          0.000000   \n",
+       " 1514       1/21/19           999         288     5.481245          0.009009   \n",
+       " 1844        4/1/19          1479         288     2.727045          0.061528   \n",
+       " 1228       3/30/19           912         288     3.862600          0.000000   \n",
        " \n",
        "       overall_quality days_selected  \n",
-       " 901          0.968296     [286 204]  \n",
-       " 217          0.886027     [569 897]  \n",
-       " 1660         0.887586     [ 82 345]  \n",
-       " 1291         0.991477     [157 247]  \n",
-       " 1557         0.961972   [  42 1266]  ,\n",
-       "       overall_sparsity\n",
-       " 0                 True\n",
-       " 1                 True\n",
-       " 2                 True\n",
-       " 3                 True\n",
-       " 4                 True\n",
-       " 5                 True\n",
-       " 6                 True\n",
-       " 7                 True\n",
-       " 8                 True\n",
-       " 9                False\n",
-       " 10                True\n",
-       " 11                True\n",
-       " 12                True\n",
-       " 13                True\n",
-       " 14                True\n",
-       " 15                True\n",
-       " 16                True\n",
-       " 17                True\n",
-       " 18                True\n",
-       " 19                True\n",
-       " 20                True\n",
-       " 21                True\n",
-       " 22                True\n",
-       " 23                True\n",
-       " 24                True\n",
-       " 25                True\n",
-       " 26                True\n",
-       " 27                True\n",
-       " 28                True\n",
-       " 29                True\n",
-       " ...                ...\n",
-       " 1913             False\n",
-       " 1914             False\n",
-       " 1915             False\n",
-       " 1916             False\n",
-       " 1917             False\n",
-       " 1918             False\n",
-       " 1919             False\n",
-       " 1920              True\n",
-       " 1921             False\n",
-       " 1922             False\n",
-       " 1923              True\n",
-       " 1924             False\n",
-       " 1925             False\n",
-       " 1926              True\n",
-       " 1927              True\n",
-       " 1928              True\n",
-       " 1929              True\n",
-       " 1930              True\n",
-       " 1931              True\n",
-       " 1932              True\n",
-       " 1933              True\n",
-       " 1934              True\n",
-       " 1935              True\n",
-       " 1936              True\n",
-       " 1937              True\n",
-       " 1938              True\n",
-       " 1939              True\n",
-       " 1940              True\n",
-       " 1941              True\n",
-       " 1942              True\n",
+       " 1112         0.828165     [688 566]  \n",
+       " 310          0.989418     [163  98]  \n",
+       " 1514         0.971972     [419 281]  \n",
+       " 1844         0.923597   [1208 1338]  \n",
+       " 1228         0.986842     [208  14]  ,\n",
+       "       overall_sparsity  overall_quality  time_sample\n",
+       " 0                 True             True         True\n",
+       " 1                 True             True         True\n",
+       " 2                 True             True         True\n",
+       " 3                 True             True        False\n",
+       " 4                 True             True         True\n",
+       " 5                 True             True         True\n",
+       " 6                 True             True         True\n",
+       " 7                 True             True         True\n",
+       " 8                 True             True        False\n",
+       " 9                False            False        False\n",
+       " 10                True             True         True\n",
+       " 11                True             True         True\n",
+       " 12                True             True         True\n",
+       " 13                True             True         True\n",
+       " 14                True             True         True\n",
+       " 15                True             True         True\n",
+       " 16                True             True         True\n",
+       " 17                True             True         True\n",
+       " 18                True             True         True\n",
+       " 19                True             True         True\n",
+       " 20                True             True         True\n",
+       " 21                True             True         True\n",
+       " 22                True             True         True\n",
+       " 23                True             True         True\n",
+       " 24                True             True         True\n",
+       " 25                True             True         True\n",
+       " 26                True             True         True\n",
+       " 27                True             True         True\n",
+       " 28                True             True         True\n",
+       " 29                True             True         True\n",
+       " ...                ...              ...          ...\n",
+       " 1913             False            False         True\n",
+       " 1914             False            False         True\n",
+       " 1915             False            False         True\n",
+       " 1916             False            False         True\n",
+       " 1917             False            False         True\n",
+       " 1918             False            False         True\n",
+       " 1919             False            False         True\n",
+       " 1920              True             True         True\n",
+       " 1921             False            False        False\n",
+       " 1922             False            False        False\n",
+       " 1923              True             True         True\n",
+       " 1924             False            False         True\n",
+       " 1925             False            False         True\n",
+       " 1926              True             True         True\n",
+       " 1927              True             True         True\n",
+       " 1928              True             True         True\n",
+       " 1929              True             True         True\n",
+       " 1930              True             True         True\n",
+       " 1931              True             True         True\n",
+       " 1932              True             True         True\n",
+       " 1933              True             True         True\n",
+       " 1934              True             True         True\n",
+       " 1935              True             True         True\n",
+       " 1936              True             True         True\n",
+       " 1937              True             True         True\n",
+       " 1938              True             True         True\n",
+       " 1939              True             True         True\n",
+       " 1940              True             True         True\n",
+       " 1941              True             True         True\n",
+       " 1942              True             True         True\n",
        " \n",
-       " [1943 rows x 1 columns])"
+       " [1943 rows x 3 columns])"
       ]
      },
      "execution_count": 6,
